# speki

./: .gitignore  2  Cargo.toml  README.md  dbflash.db  dbflash2.db  mod.rs  todo
.github/: dependabot.yml
.github/workflows/: rust.yml  test.yml
src/: app.rs  krossterm.rs  main.rs  tabs.rs
src/events/: add_card.rs  browse.rs  import.rs  incread.rs  mod.rs  review.rs
src/logic/: add_card.rs  browse.rs  import.rs  incread.rs  mod.rs  review.rs
src/popups/: anki_users.rs  ankimporter.rs  chapter_selection.rs  edit_card.rs  edit_text.rs  filepicker.rs  find_card.rs  load_cards.rs  menu.rs  message_popup.rs  mod.rs  newchild.rs  progress_popup.rs  splash_message.rs  wikiselect.rs
src/tabs/: add_card.rs  browse.rs  import.rs  incread.rs  mod.rs
src/tabs/add_card/: logic.rs
src/tabs/browse/: logic.rs  mod.rs
src/tabs/import/: logic.rs  mod.rs
src/tabs/incread/: logic.rs  ui.rs
src/tabs/review/: logic.rs  mod.rs  ui.rs
src/tabs/review/reviewmodes/: finished.rs  incread.rs  mod.rs  unfinished.rs
src/tests/doc/: databasetest.rs  mod.rs
src/tests/tdd/: mod.rs
src/ui/: add_card.rs  browse.rs  import.rs  incread.rs  mod.rs  mywidgets.rs  review.rs
src/utils/: aliases.rs  ankitemplate.rs  area.rs  card.rs  dag.rs  epub.rs  filter.rs  incread.rs  interval.rs  libextensions.rs  misc.rs  mod.rs  mywidgets.rs  statelist.rs  structs.rs  textinput.rs  topics.rs
src/utils/sql/: delete.rs  fetch.rs  insert.rs  mod.rs  status.rs  update.rs
src/utils/sql/fetch/: cards.rs  mod.rs
src/utils/widgets/: ankimporter.rs  button.rs  card_status.rs  cardlist.rs  cardrater.rs  filepicker.rs  find_card.rs  list.rs  load_cards.rs  message_box.rs  mod.rs  mode_status.rs  newchild.rs  progress_bar.rs  submit_finished.rs  textinput.rs  topics.rs  view_dependencies.rs  view_dependents.rs
src/widgets/: ankimporter.rs  button.rs  card_status.rs  cardlist.rs  cardrater.rs  cardstatus.rs  checkbox.rs  checkboxlist.rs  filepicker.rs  find_card.rs  infobox.rs  list.rs  load_cards.rs  message_box.rs  mod.rs  mode_status.rs  newchild.rs  numeric_input.rs  optional_bool_filter.rs  optionlist.rs  progress_bar.rs  radiomenu.rs  submit_finished.rs  textinput.rs  topics.rs  view_dependencies.rs  view_dependents.rs
src/widgets/textinput/: info.rs  keyhandler.rs  mod.rs  navigation.rs
