[package]
name = "flash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#crossterm =  "0.23"
[dependencies]
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
serde =  { version = "1.0.137", optional = false, features = ["derive"]}
serde_derive = "1.0.137"
serde_json = "1.0.81"
rusqlite = "0.27.0"
chrono = "0.4.19"
bitflags = "1.3"
csv = "1.1"
rand = "0.8.5"
queues = "1.1.0"
webbrowser = "0.8.0"
anyhow = "1.0.65"
reqwest = {version = "0.11.12", features = ["blocking", "gzip"]}
zip = "0.6.2"
rodio = "0.16.0"
scraper = "0.13.0"
regex = "1.6.0"
lazy_static = "1.4.0"
viuer = "0.6.1"
sanitize-filename = "0.4.0"


[dependencies.crossterm]
version = "0.25.0"
features = ["event-stream"] 
