[package]
name = "speki"
version = "0.2.9"
edition = "2021"
authors = ["Tor Berge torberge@outlook.com"]
license = "GPL-2.0-only"
description = "Flashcard app for your terminal"
readme = "README.md"
homepage = "https://speki.net/"
repository = "https://github.com/TBS1996/speki"
keywords = ["cli", "flashcards", "tui", "educational"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.16", default-features = false, features = ['crossterm'] }
serde =  { version = "1.0.137", optional = false, features = ["derive"]}
serde_derive = "1.0.137"
serde_json = "1.0.81"
chrono = "0.4.19"
rand = "0.8.5"
anyhow = "1.0.65"
reqwest = {version = "0.11.12", features = ["blocking", "gzip", "stream"]}
zip = "0.6.2"
rodio = "0.16.0"
regex = "1.6.0"
sanitize-filename = "0.4.0"
futures-util = "0.3.24"
wikipedia = "0.3.4"
tokio = { version = "1.21.2", features = ["full"] }
home = "0.5.3"
unicode-segmentation = "1.10.0"
#usqlite = "0.27.0"
toml = "0.5.9"
hyper = { version = "0.14.20", features = ["full"] }
hyper-tls = "0.5.0"

[dependencies.crossterm]
version = "0.25.0"
features = ["event-stream"] 

# somehow, this makes it possible to build the binary on windows
[dependencies.rusqlite]
version="0.27.0"
features=["bundled"] 
